# point_labeler

./: README.md
assets/: labels.xml  settings.cfg
scripts/: sekitti2txt.py
scripts/qua2matrix/: CMakeLists.txt  qua2matrix.cpp
src/widget/: KittiReader.cpp
